--- a/src/main/resources/templates/MainCompany/editMainCompany.html
+++ b/src/main/resources/templates/MainCompany/editMainCompany.html
@@ -20,10 +20,10 @@
                     </div>
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <select th:field="*{manager}" class="input-field">
+                            <!--<select th:field="*{manager}" class="input-field">
                                 <option id="manager" th:each="user: ${users}" th:value="${user.id}" th:text="${user.firstname}"></option>
                             </select>
-                            <label for="manager">Manager</label>
+                            <label for="manager">Manager</label>-->
                         </div>
                     </div>
 
