--- a/src/main/resources/templates/viewProject.html
+++ b/src/main/resources/templates/viewProject.html
@@ -20,8 +20,6 @@
                 <div class="panel_title">
                     <h2>Manager</h2>
                 </div>
-                Name: <span th:text="${project.manager.lastname}"></span> <span th:text="${project.manager.firstname}"></span><br/>
-                Email: <a th:href="'mailto:' + (${project.manager.email})"><span th:text="${project.manager.email}"></span> </a>
             </div>
         </div>
         <div class="col l6 m6 s12">
@@ -30,9 +28,7 @@
                     <h2>Company</h2>
                 </div>
                 Name: <span th:text="${project.company.name}"></span><br/>
-                Manager : <span th:text="${project.company.manager.lastname}"></span> <span th:text="${project.company.manager.firstname}"></span><br/>
-                Email: <a th:href="'mailto:' + (${project.company.manager.email})"><span th:text="${project.company.manager.email}"></span> </a>
-            </div>
+
         </div>
     </div>
     <div class="row">
@@ -47,15 +43,13 @@
                     <tr>
                         <th>ID</th>
                         <th>Name</th>
-                        <th>Manager</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="plot : ${project.plots}">
                         <td th:text="${plot.id}">undefined</td>
-                        <!--<td th:text="${plot.name}">undefined</td>-->
-                        <td th:text="${plot.manager.firstname} + ' ' + ${plot.manager.lastname}">undefined</td>
+                        <td th:text="${plot.name}">undefined</td>
                         <td>
                             <a th:href="@{'/project/' + ${plot.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
