--- a/src/main/resources/templates/Company/company.html
+++ b/src/main/resources/templates/Company/company.html
@@ -25,10 +25,10 @@
                         <td th:text="${company.name}">undefined</td>
                         <td th:text="${company.mainCompany.name}">undefined</td>
                         <td>
-                            <a th:href="@{'/company/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
+                            <a th:href="@{'/company/view/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
                             </a>
-                            <a th:href="@{'/company/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
+                            <a th:href="@{'/company/view/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">edit</i>
                             </a>
                             <a class="waves-effect waves-light btn modal-trigger" th:href="'#modal1' + ${company.id}">Modal</a>
