--- a/src/main/resources/templates/Plot/viewPlot.html
+++ b/src/main/resources/templates/Plot/viewPlot.html
@@ -8,7 +8,7 @@
         <div class="col l12 m12 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h1>Plot <span th:text="${plot.id}"></span></h1>
+                    <h1>Plot <span th:text="${plot.name}"></span></h1>
                 </div>
                 This page is a particular plot
             </div>
@@ -25,9 +25,18 @@
         <div class="col l6 m6 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Company</h2>
+                    <h2>Project</h2>
                 </div>
                 Name: <span th:text="${plot.project.name}"></span><br/>
+
+            </div>
+        </div>
+        <div class="col l6 m6 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Resources</h2>
+                </div>
+
 
             </div>
         </div>
@@ -41,24 +50,24 @@
                     <table class="bordered highlight responsive-table">
                         <thead>
                         <tr>
-                            <th>ID</th>
                             <th>Name</th>
+                            <th>Proportion</th>
                             <th>Actions</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <!--<tr th:each="plot : ${project.plots}">
-                            <td th:text="${plot.id}">undefined</td>
-                            <td th:text="${plot.name}">undefined</td>
-                            <td>
+                        <tr th:each="resourcePlot : ${plot.plotResources}">
+                            <td th:text="${resourcePlot.resource.name}">undefined</td>
+                            <td th:text="${resourcePlot.proportion}">undefined</td>
+                            <!--<td>
                                 <a th:href="@{'/project/' + ${plot.id}}" class="btn-floating btn-small waves-effect waves-light">
                                     <i class="material-icons">visibility</i>
                                 </a>
                                 <a th:href="@{'/project/' + ${plot.id}}" class="btn-floating btn-small waves-effect waves-light">
                                     <i class="material-icons">edit</i>
                                 </a>
-                            </td>
-                        </tr>-->
+                            </td>-->
+                        </tr>
                         </tbody>
                     </table>
                 </div>
