Adding harvest process

--- a/src/main/resources/templates/Plot/viewPlot.html
+++ b/src/main/resources/templates/Plot/viewPlot.html
@@ -92,7 +92,11 @@
             </a>
         </div>
         <!-- end Add button-->
+
+    </div>
 </main>
 
 <div th:replace="common/footer :: footer"></div>
+<!--Alerte Message-->
+<!--End Alerte Message-->
 </html>
