--- a/src/main/resources/templates/Company/viewCompany.html
+++ b/src/main/resources/templates/Company/viewCompany.html
@@ -4,6 +4,7 @@
 <div th:replace="common/head :: head"></div>
 <div th:replace="common/header :: header"></div>
 <main>
+    <div th:replace="common/headerCompany :: headerCompany"></div>
     <div class="row">
         <div class="col l12 m12 s12">
             <div class="panel6">
