--- a/src/main/resources/templates/Harvest/harvest.html
+++ b/src/main/resources/templates/Harvest/harvest.html
@@ -8,26 +8,26 @@
         <div class="col l12 m12 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Plots</h2>
+                    <h2>Harvests</h2>
                 </div>
                 <table class="bordered highlight responsive-table">
                     <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Name</th>
-                        <th>Size</th>
-                        <th>Location</th>
-                        <th>Project</th>
+                        <th>Date</th>
+                        <th>Quantity</th>
+                        <th>Plot</th>
+                        <th>Resource</th>
                         <th>Manager</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="plot : ${plots}">
-                        <td th:text="${plot.id}">undefined</td>
-                        <td th:text="${plot.name}">undefined</td>
-                        <td th:text="${plot.size}">undefined</td>
-                        <td>undefined</td>
-                        <td th:text="${plot.project.name}">undefined</td>
+                    <tr th:each="harvest : ${harvests}">
+                        <td th:text="${harvest.id}">undefined</td>
+                        <td th:text="${harvest.date}">undefined</td>
+                        <td th:text="${harvest.quantity}">undefined</td>
+                        <td th:text="${harvest.plot.name}">undefined</td>
+                        <td th:text="${plot.resource.name}">undefined</td>
                         <td>undefined</td>
                     </tr>
                     </tbody>
@@ -35,7 +35,7 @@
                 <div th:fragment="pagination" class="row center-align">
                     <ul class="pagination">
                         <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-                        <li th:each="i:${#numbers.sequence(0, plots.totalPages -1)}" class="waves-effect">
+                        <li th:each="i:${#numbers.sequence(0, harvests.totalPages -1)}" class="waves-effect">
                             <a th:href="@{${url}(page=${i+1})}" th:text="${i+1}"></a>
                         </li>
                         <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
