Starting Graph and managing exceptions

--- a/src/main/resources/templates/Harvest/harvest.html
+++ b/src/main/resources/templates/Harvest/harvest.html
@@ -27,7 +27,7 @@
                         <td th:text="${harvest.date}">undefined</td>
                         <td th:text="${harvest.quantity}">undefined</td>
                         <td th:text="${harvest.plot.name}">undefined</td>
-                        <td th:text="${plot.resource.name}">undefined</td>
+                        <td th:text="${harvest.resource.name}">undefined</td>
                         <td>undefined</td>
                     </tr>
                     </tbody>
