--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -81,7 +81,7 @@
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a th:href="@{/plot/}">All</a></li>
-                            <li class="sub-menu"><a th:href="@{/plot/map}">All (map)</a></li>
+                            <li class="sub-menu"><a th:href="@{/plot/map/}">All (map)</a></li>
                             <li class="sub-menu"><a th:href="@{/plot/add/}">Add</a></li>
                         </ul>
                     </div>
