--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -77,7 +77,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header"><i class="petite material-icons">business</i>Plots<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">location_on</i>Plots<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a th:href="@{/plot/}">All</a></li>
