Trying validate form. Still problem with ManyToOne relationship

--- a/src/main/resources/templates/MainCompany/mainCompany.html
+++ b/src/main/resources/templates/MainCompany/mainCompany.html
@@ -26,10 +26,9 @@
                                         <a th:href="@{'/maincompany/view/' + ${maincompany.id}}" class="btn-floating btn-small waves-effect waves-light">
                                             <i class="material-icons">visibility</i>
                                         </a>
-                                        <a th:href="@{'/maincompany/view/' + ${maincompany.id}}" class="btn-floating btn-small waves-effect waves-light">
+                                        <a th:href="@{'/maincompany/update/' + ${maincompany.id}}" class="btn-floating btn-small waves-effect waves-light">
                                             <i class="material-icons">edit</i>
                                         </a>
-                                        <a class="waves-effect waves-light btn modal-trigger" th:href="'#modal1' + ${maincompany.id}">Modal</a>
                                     </td>
                             </tr>
                     </tbody>
