--- a/src/main/resources/templates/viewHarvestByEntity.html
+++ b/src/main/resources/templates/viewHarvestByEntity.html
@@ -17,30 +17,12 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col l12 m12 s12">
-            <div class="panel6">
-                <div class="panel_title">
-                    <h2>Alimentary</h2>
-                </div>
-                <div class="map-panel">
-                    <div id="cocoa-sum-harvest"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
 </main>
 
 <div th:replace="common/footer :: footer"></div>
 <!-- Un test de map -->
 <script th:inline="javascript">
-    var graphWood = /*[[${myGraphDataWood}]]*/ '';
-    var figureWood = JSON.parse(/*[[${myGraphDataWood}]]*/);
-    var figureCocoa = JSON.parse(/*[[${myGraphDataCocoa}]]*/);
-    Plotly.newPlot('wood-sum-harvest', figureWood.data, figureWood.layout);
-    console.log(figureWood);
-    Plotly.newPlot('cocoa-sum-harvest', figureCocoa.data, figureCocoa.layout);
+    var figure = JSON.parse(/*[[${myGraphData}]]*/);
+    Plotly.newPlot('wood-sum-harvest', figure.data, figure.layout);
 </script>
-<!--<div th:replace="common/map :: map"></div>-->
 </html>
