--- a/src/main/resources/templates/Company/company.html
+++ b/src/main/resources/templates/Company/company.html
@@ -28,10 +28,9 @@
                             <a th:href="@{'/company/view/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
                             </a>
-                            <a th:href="@{'/company/view/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
+                            <a th:href="@{'/company/update/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">edit</i>
                             </a>
-                            <a class="waves-effect waves-light btn modal-trigger" th:href="'#modal1' + ${company.id}">Modal</a>
                         </td>
                     </tr>
                     </tbody>
