--- a/src/main/resources/templates/Company/editCompany.html
+++ b/src/main/resources/templates/Company/editCompany.html
@@ -14,7 +14,8 @@
                 <form action="#" th:action="@{/company/add/}" th:object="${company}" method="post" class="col s12">
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <input id="companyName" type="text" class="validate" th:field="*{name}" required="required" />
+                            <input id="companyName" type="text" class="validate" th:field="*{name}" />
+                            <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
                             <label for="companyName">Company Name</label>
                         </div>
                     </div>
