--- a/src/main/resources/templates/Company/updateCompany.html
+++ b/src/main/resources/templates/Company/updateCompany.html
@@ -8,26 +8,24 @@
         <div class="col l12 m12 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Add a Main Companies</h2>
+                    <h2>Add a Company</h2>
                 </div>
                 <!--/*@thymesVar id="MainCompany" type="de.onetwotree.margaux.entity.MainCompany"*/-->
-                <form action="#" th:action="@{/maincompany/add/}" th:object="${MainCompany}" method="post" class="col s12">
+                <form action="#" th:action="@{'/company/update/'+ ${company.id}}" th:object="${company}" method="post" class="col s12">
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <input id="mainCompanyName" type="text" class="validate" th:field="*{name}" />
-                            <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
-                            <label for="mainCompanyName">Company Name</label>
+                            <input id="companyName" type="text" class="validate" th:field="*{name}" required="required" />
+                            <label for="companyName">Company Name</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <!--<select th:field="*{manager}" class="input-field">
-                                <option id="manager" th:each="user: ${users}" th:value="${user.id}" th:text="${user.firstname}"></option>
+                            <select th:field="*{mainCompany}" class="input-field">
+                                <option id="mainCompany" th:each="mainCompany: ${mainCompanies}" th:value="${mainCompany.id}" th:text="${mainCompany.name}"></option>
                             </select>
-                            <label for="manager">Manager</label>-->
+                            <label for="mainCompany">Main Company</label>
                         </div>
                     </div>
-
                     <input class="waves-effect waves-light btn" type="submit" />
                 </form>
             </div>
