--- a/src/main/resources/templates/MainCompany/updateMainCompany.html
+++ b/src/main/resources/templates/MainCompany/updateMainCompany.html
@@ -8,14 +8,13 @@
         <div class="col l12 m12 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Add a Main Companies</h2>
+                    <h2>Update a Main Companies</h2>
                 </div>
                 <!--/*@thymesVar id="MainCompany" type="de.onetwotree.margaux.entity.MainCompany"*/-->
-                <form action="#" th:action="@{/maincompany/add/}" th:object="${MainCompany}" method="post" class="col s12">
+                <form action="#" th:action="@{'/maincompany/update/'+ ${mainCompany.id}}" th:object="${mainCompany}" method="post" class="col s12">
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <input id="mainCompanyName" type="text" class="validate" th:field="*{name}" />
-                            <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
+                            <input id="mainCompanyName" type="text" class="validate" th:field="*{name}" required="required" />
                             <label for="mainCompanyName">Company Name</label>
                         </div>
                     </div>
