Form validating took in place, still validation in service Todo

--- a/src/main/resources/templates/Company/updateCompany.html
+++ b/src/main/resources/templates/Company/updateCompany.html
@@ -11,10 +11,10 @@
                     <h2>Add a Company</h2>
                 </div>
                 <!--/*@thymesVar id="MainCompany" type="de.onetwotree.margaux.entity.MainCompany"*/-->
-                <form action="#" th:action="@{'/company/update/'+ ${company.id}}" th:object="${company}" method="post" class="col s12">
+                <form action="#" th:action="@{'/company/update/'+ ${company.id}}" th:object="${company}" th:method="post" class="col s12">
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <input id="companyName" type="text" class="validate" th:field="*{name}" required="required" />
+                            <input id="companyName" type="text" class="validate" th:field="*{name}" />
                             <label for="companyName">Company Name</label>
                         </div>
                     </div>
