--- a/src/main/resources/templates/MainCompany/updateMainCompany.html
+++ b/src/main/resources/templates/MainCompany/updateMainCompany.html
@@ -14,7 +14,7 @@
                 <form action="#" th:action="@{'/maincompany/update/'+ ${mainCompany.id}}" th:object="${mainCompany}" method="post" class="col s12">
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <input id="mainCompanyName" type="text" class="validate" th:field="*{name}" required="required" />
+                            <input id="mainCompanyName" type="text" class="validate" th:field="*{name}" />
                             <label for="mainCompanyName">Company Name</label>
                         </div>
                     </div>
