--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,9 +6,9 @@
 <main>
     <h1>Request Failed...</h1>
      Failed URL: <span th:text="${#httpServletRequest.requestURI}">undefined</span>
-    <div th:if="${exception != null}"
+    <!--<div th:if="${exception != null}"
          th:utext="'Exception: ' + ${exception.message}" th:remove="tag">
-    </div>
+    </div>-->
 </main>
 
 <div th:replace="common/footer :: footer"></div>
