--- a/src/main/resources/templates/Company/viewCompany.html
+++ b/src/main/resources/templates/Company/viewCompany.html
@@ -66,13 +66,20 @@
         </div>
     </div>
     <!--Add button-->
-    <div class="fixed-action-btn horizontal">
-        <a th:href="@{/maincompany/add/}" class="btn-floating btn-large waves-effect waves-light">
-            <i class="material-icons">add</i>
+    <div class="fixed-action-btn horizontal click-to-toggle">
+        <a class="btn-floating btn-large">
+            <i class="material-icons">menu</i>
         </a>
+        <ul>
+            <li><a id="alert-modal-open" class="btn-floating red"><i class="material-icons">report_problem</i></a></li>
+            <!--<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+            <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+            <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>-->
+        </ul>
     </div>
     <!-- end Add button-->
 </main>
 
 <div th:replace="common/footer :: footer"></div>
+<div th:replace="common/pop-up/addAlert :: addAlert"></div>
 </html>
