--- a/src/main/resources/templates/Company/viewCompany.html
+++ b/src/main/resources/templates/Company/viewCompany.html
@@ -26,42 +26,18 @@
         <div class="col l6 m6 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Main Company</h2>
+                    <h2>Alerts</h2>
                 </div>
-                Name: <span th:text="${company.mainCompany.name}"></span><br/>
-            </div>
+                <div th:with="alertItems=${alertsCompany}">
+                    <div th:replace="common/sheetAlert :: sheetAlert"></div>
+                </div>
         </div>
-    </div>
-    <div class="row">
         <div class="col l6 m6 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Projects</h2>
+                    <h2>Main Company</h2>
                 </div>
-                <p>This projects belongs to <span th:text="${company.name}"></span> </p>
-                <table class="bordered highlight responsive-table">
-                    <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="project : ${company.projects}">
-                        <td th:text="${project.id}">undefined</td>
-                        <td th:text="${project.name}">undefined</td>
-                        <td>
-                            <a th:href="@{'/project/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
-                                <i class="material-icons">visibility</i>
-                            </a>
-                            <a th:href="@{'/project/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
-                                <i class="material-icons">edit</i>
-                            </a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+                Name: <span th:text="${company.mainCompany.name}"></span><br/>
             </div>
         </div>
     </div>
@@ -71,7 +47,7 @@
             <i class="material-icons">menu</i>
         </a>
         <ul>
-            <li><a id="alert-modal-open" class="btn-floating red"><i class="material-icons">report_problem</i></a></li>
+            <li><a th:href="@{'/alert/add/' + ${urlId}}" class="btn-floating red"><i class="material-icons">report_problem</i></a></li>
             <!--<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
             <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
             <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>-->
@@ -81,5 +57,4 @@
 </main>
 
 <div th:replace="common/footer :: footer"></div>
-<div th:replace="common/pop-up/addAlert :: addAlert"></div>
 </html>
