--- a/src/main/resources/templates/MainCompany/viewMainCompany.html
+++ b/src/main/resources/templates/MainCompany/viewMainCompany.html
@@ -35,7 +35,7 @@
                         <td th:text="${company.id}">undefined</td>
                         <td th:text="${company.name}">undefined</td>
                         <td>
-                            <a th:href="@{'/company/' + ${maincompany.id}}" class="btn-floating btn-small waves-effect waves-light">
+                            <a th:href="@{'/company/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
                             </a>
                             <a th:href="@{'/company/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
@@ -47,13 +47,30 @@
                 </table>
             </div>
         </div>
+        <div class="col l6 m6 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Alerts</h2>
+                </div>
+                <div th:with="alertItems=${alertsMainCompany}">
+                    <div th:replace="common/sheetAlert :: sheetAlert"></div>
+                </div>
+            </div>
     </div>
     <!--Add button-->
-    <div class="fixed-action-btn horizontal">
-        <a th:href="@{/maincompany/add/}" class="btn-floating btn-large waves-effect waves-light">
-            <i class="material-icons">add</i>
-        </a>
-    </div>
+        <!--Add button-->
+        <div class="fixed-action-btn horizontal click-to-toggle">
+            <a class="btn-floating btn-large">
+                <i class="material-icons">menu</i>
+            </a>
+            <ul>
+                <li><a th:href="@{'/alert/add/' + ${urlId}}" class="btn-floating red"><i class="material-icons">report_problem</i></a></li>
+                <!--<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+                <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+                <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>-->
+            </ul>
+        </div>
+        <!-- end Add button-->
     <!-- end Add button-->
 </main>
 
