--- a/src/main/resources/templates/Plot/viewHarvestByPlot.html
+++ b/src/main/resources/templates/Plot/viewHarvestByPlot.html
@@ -28,6 +28,18 @@
             </div>
         </div>
     </div>
+    <!--Add button-->
+    <div class="fixed-action-btn horizontal click-to-toggle">
+        <a class="btn-floating btn-large red">
+            <i class="material-icons">menu</i>
+        </a>
+        <ul>
+            <li><a class="btn-floating red" title="Add an harvest" th:href="@{'/plot/view/' + ${urlId}+'/add-harvest/'}"><i class="material-icons">swap_calls</i></a></li>
+            <li><a class="btn-floating yellow darken-1" title="Add a resource" th:href="@{'/plot/view/' + ${urlId} + '/add-resource/'}"><i class="material-icons">spa</i></a></li>
+            <li><a class="btn-floating green" title="Edit this plot" th:href="@{'/plot/update/' + ${urlId}}"><i class="material-icons">edit</i></a></li>
+        </ul>
+    </div>
+    <!-- end Add button-->
 </main>
 
 <div th:replace="common/footer :: footer"></div>
