--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -6,12 +6,16 @@
     <nav>
         <a href="#" data-activates="slide-out" class="button-collapse grey-text text-darken-3"><i class="material-icons">menu</i></a>
             <div class="right drop-pmenu">
-                <a class='dropdown-button btn' href='#' data-activates='personnal-menu'>Jack Beauregard</a>
+                <a class='dropdown-button btn' href='#' data-activates='personnal-menu'>[[${#httpServletRequest.remoteUser}]]</a>
                 <!-- Dropdown Structure -->
                 <ul id='personnal-menu' class='dropdown-content'>
                     <li><a href="#!"><i class="material-icons">perm_identity</i>Profile</a></li>
                     <li class="divider"></li>
-                    <li><a href="#!"><i class="material-icons">power_settings_new</i>Logout</a></li>
+                    <li>
+                        <form th:action="@{/logout}" method="post">
+                            <input type="submit" value="Sign Out"/>
+                        </form>
+                    </li>
                 </ul>
             </div>
     </nav>
